gitops/components/go-ping-service/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: go-ping-service
  namespace: apps
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: go-ping-service
  template:
    metadata:
      labels:
        app: go-ping-service
    spec:
      containers:
        - name: go-ping-service
          image: ghcr.io/vovsike/go-ping-service:v1   # base image; overlay will bump this
  strategy:
    blueGreen:
      activeService: go-ping-service
      previewService: go-ping-service-preview
      autoPromotionEnabled: false         # require manual promote
      scaleDownDelaySeconds: 30           # optional safety delay
