gitops/components/go-ping-service/base/services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
apiVersion: v1
kind: Service
metadata:
  name: go-ping-service
  namespace: apps
spec:
  selector:
      app: go-ping-service
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: go-ping-service-preview
  namespace: apps
spec:
  selector: 
      app: go-ping-service
  ports:
    - name: http
      port: 80
      targetPort: 3000
