gitops/components/go-ping-service/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-ping-service
  namespace: apps
spec:
  parentRefs:
  - group: ""
    kind: go-ping-service
    name: reviews
    port: 80
  rules:
  - matches:
    - headers:
      - name: end-user
        value: jason
    backendRefs:
    - name: go-ping-service
      port: 80
  - backendRefs:
    - name: go-ping-service-preview
      port: 80
